# rqlite

./: .gitmodules  Cargo.toml  LICENSE  aFile.db
src/: btree.rs  db.rs  errors.rs  index.rs  main.rs  pager.rs  record.rs  schema.rs  table.rs  types.rs  util.rs
src/btree/: mod.rs  page.rs  range.rs
