[package]
name = "rqlite"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
description = "Reading (and maybe writing) SQLite files in Rust"
homepage = "https://github.com/mjkillough/rqlite"
repository = "https://github.com/mjkillough/rqlite"
keywords = ["sqlite", "database", "db", "sql"]
categories = ["database", "database-implementations"]
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1.0"
bytes = "0.4"
error-chain = "0.10"

[dependencies.nom_sql]
path = "./nom-sql"
